# rust-spotify

./: Cargo.toml  README.md
migrations/: 20221231174153_create-table.sql  20221231222221_update_table_creation.sql  20221231222435_update_table_name.sql
src/: lib.rs  main.rs  spotify_client.rs
src/db/: config.rs  mod.rs  songs.rs
src/lru/: mod.rs
src/player_state/: mod.rs
src/spotify_client/: mod.rs
src/youtube_client/: mod.rs  search.rs
