[package]
name = "spotify-music-vid"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
dotenv = "0.15.0"
eyre = "0.6.8"
open = "3.2.0"
reqwest = {version="0.11.4", features=["json"]}
serde = {version="1.0.130", features=["derive"]}
spotify-oauth = "0.3.0"
tokio = {version="1.23.0", features=["full"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
url = "2.3.1"
