[package]
name = "spotify-music-vid"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
config = "0.13.3"
dotenv = "0.15.0"
eyre = "0.6.8"
futures-util = "0.3.25"
open = "3.2.0"
reqwest = {version="0.11.4", features=["json"]}
rspotify = {version="0.11.6", features=["cli"]}
serde = {version="1.0.130", features=["derive"]}
sqlx = {version="0.6.2", features=["postgres", "runtime-tokio-native-tls", "macros"]}
tokio = {version="1.23.0", features=["full"]}
tracing = "0.1.37"
tracing-subscriber ={version= "0.3.16", features=["fmt", "env-filter"]}
url = "2.3.1"
warp = "0.3.3"
